--- a/landing page/styles.css
+++ b/landing page/styles.css
@@ -863,7 +863,7 @@ footer ul li:nth-child(1) a:before {
 }
 
 footer ul li:nth-child(2) a:before {
-  background: #55acee;
+  background: #000000;
 }
 
 footer ul li:nth-child(3) a:before {
