--- a/News/styles.css
+++ b/News/styles.css
@@ -53,7 +53,7 @@ nav {
 }
 
 .company-logo {
-    margin-right: 280px; /* Space between logo and nav links */
+    margin-right: 280px; 
 }
 
 .company-logo img {
@@ -169,7 +169,6 @@ main {
     color: var(--accent-color);
 }
 
-/* Responsive Styles */
 @media (max-width: 768px) {
     .nav-links {
         display: none;
